--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ title: Shindeok Kang
 email: heavymery@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Shindeok Kang personal blog.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://blog.heavymery.net" # the base hostname & protocol for your site
+baseurl: "/blog/" # the subpath of your site, e.g. /blog/
+url: "http://heavymery.github.io" # the base hostname & protocol for your site
 twitter_username: heavymery
 github_username: heavymery
 
